// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ConnectedSidebar correctly expand admin-form-config menu 1`] = `
Array [
  <SubMenu
    icon={<ForwardRef(DashboardOutlined) />}
    title="Missions"
  >
    <MenuItem>
      <Link
        className="admin-link"
        to="/missions/active"
      >
        Active
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/missions/draft"
      >
        Draft
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/missions/complete"
      >
        Complete
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/missions/trash"
      >
        Trash
      </Link>
    </MenuItem>
  </SubMenu>,
  <SubMenu
    icon={<ForwardRef(DashboardOutlined) />}
    title="Admin"
  >
    <SubMenu
      title="Users"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users/list"
        >
          User Management
        </Link>
      </MenuItem>
    </SubMenu>
    <MenuItem>
      <Link
        className="admin-link"
        to="/admin/teams"
      >
        Teams
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/product-catalogue/list"
      >
        Product Catalogue
      </Link>
    </MenuItem>
    <SubMenu
      title="Locations"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/location/unit"
        >
          Locations unit
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/location/group"
        >
          Locations unit group
        </Link>
      </MenuItem>
    </SubMenu>
    <SubMenu
      title="Form Configuration"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/form-config/releases"
        >
          Manifest Releases
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/form-config/drafts"
        >
          Draft Files
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/form-config/json-validators"
        >
          JSON Validators
        </Link>
      </MenuItem>
    </SubMenu>
  </SubMenu>,
]
`;

exports[`components/ConnectedSidebar correctly expand location menu 1`] = `
Array [
  <SubMenu
    icon={<ForwardRef(DashboardOutlined) />}
    title="Missions"
  >
    <MenuItem>
      <Link
        className="admin-link"
        to="/missions/active"
      >
        Active
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/missions/draft"
      >
        Draft
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/missions/complete"
      >
        Complete
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/missions/trash"
      >
        Trash
      </Link>
    </MenuItem>
  </SubMenu>,
  <SubMenu
    icon={<ForwardRef(DashboardOutlined) />}
    title="Admin"
  >
    <SubMenu
      title="Users"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users/list"
        >
          User Management
        </Link>
      </MenuItem>
    </SubMenu>
    <MenuItem>
      <Link
        className="admin-link"
        to="/admin/teams"
      >
        Teams
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/product-catalogue/list"
      >
        Product Catalogue
      </Link>
    </MenuItem>
    <SubMenu
      title="Locations"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/location/unit"
        >
          Locations unit
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/location/group"
        >
          Locations unit group
        </Link>
      </MenuItem>
    </SubMenu>
    <SubMenu
      title="Form Configuration"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/form-config/releases"
        >
          Manifest Releases
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/form-config/drafts"
        >
          Draft Files
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/form-config/json-validators"
        >
          JSON Validators
        </Link>
      </MenuItem>
    </SubMenu>
  </SubMenu>,
]
`;

exports[`components/ConnectedSidebar correctly expand users menu 1`] = `
Array [
  <SubMenu
    icon={<ForwardRef(DashboardOutlined) />}
    title="Missions"
  >
    <MenuItem>
      <Link
        className="admin-link"
        to="/missions/active"
      >
        Active
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/missions/draft"
      >
        Draft
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/missions/complete"
      >
        Complete
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/missions/trash"
      >
        Trash
      </Link>
    </MenuItem>
  </SubMenu>,
  <SubMenu
    icon={<ForwardRef(DashboardOutlined) />}
    title="Admin"
  >
    <SubMenu
      title="Users"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users/list"
        >
          User Management
        </Link>
      </MenuItem>
    </SubMenu>
    <MenuItem>
      <Link
        className="admin-link"
        to="/admin/teams"
      >
        Teams
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/product-catalogue/list"
      >
        Product Catalogue
      </Link>
    </MenuItem>
    <SubMenu
      title="Locations"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/location/unit"
        >
          Locations unit
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/location/group"
        >
          Locations unit group
        </Link>
      </MenuItem>
    </SubMenu>
    <SubMenu
      title="Form Configuration"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/form-config/releases"
        >
          Manifest Releases
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/form-config/drafts"
        >
          Draft Files
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/form-config/json-validators"
        >
          JSON Validators
        </Link>
      </MenuItem>
    </SubMenu>
  </SubMenu>,
]
`;

exports[`components/ConnectedSidebar displays menu links for enabled Location module 1`] = `
Array [
  <SubMenu
    icon={<ForwardRef(DashboardOutlined) />}
    title="Missions"
  >
    <MenuItem>
      <Link
        className="admin-link"
        to="/missions/active"
      >
        Active
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/missions/draft"
      >
        Draft
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/missions/complete"
      >
        Complete
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/missions/trash"
      >
        Trash
      </Link>
    </MenuItem>
  </SubMenu>,
  <SubMenu
    icon={<ForwardRef(DashboardOutlined) />}
    title="Admin"
  >
    <SubMenu
      title="Users"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users/list"
        >
          User Management
        </Link>
      </MenuItem>
    </SubMenu>
    <MenuItem>
      <Link
        className="admin-link"
        to="/admin/teams"
      >
        Teams
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/product-catalogue/list"
      >
        Product Catalogue
      </Link>
    </MenuItem>
    <SubMenu
      title="Locations"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/location/unit"
        >
          Locations unit
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/location/group"
        >
          Locations unit group
        </Link>
      </MenuItem>
    </SubMenu>
    <SubMenu
      title="Form Configuration"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/form-config/releases"
        >
          Manifest Releases
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/form-config/drafts"
        >
          Draft Files
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/form-config/json-validators"
        >
          JSON Validators
        </Link>
      </MenuItem>
    </SubMenu>
  </SubMenu>,
]
`;

exports[`components/ConnectedSidebar displays menu links for enabled modules 1`] = `
Array [
  <SubMenu
    icon={<ForwardRef(DashboardOutlined) />}
    title="Missions"
  >
    <MenuItem>
      <Link
        className="admin-link"
        to="/missions/active"
      >
        Active
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/missions/draft"
      >
        Draft
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/missions/complete"
      >
        Complete
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/missions/trash"
      >
        Trash
      </Link>
    </MenuItem>
  </SubMenu>,
  <SubMenu
    icon={<ForwardRef(DashboardOutlined) />}
    title="Admin"
  >
    <SubMenu
      title="Users"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users/list"
        >
          User Management
        </Link>
      </MenuItem>
    </SubMenu>
    <MenuItem>
      <Link
        className="admin-link"
        to="/admin/teams"
      >
        Teams
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/product-catalogue/list"
      >
        Product Catalogue
      </Link>
    </MenuItem>
    <SubMenu
      title="Form Configuration"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/form-config/releases"
        >
          Manifest Releases
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/form-config/drafts"
        >
          Draft Files
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/form-config/json-validators"
        >
          JSON Validators
        </Link>
      </MenuItem>
    </SubMenu>
  </SubMenu>,
]
`;

exports[`components/ConnectedSidebar renders the ConnectedSidebar component 1`] = `
Object {
  "children": Array [
    <div
      className="ant-layout-sider-children"
    >
      <div
        className="logo"
      >
        <Link
          to="/"
        >
          <img
            alt=""
            className="img-fluid"
            src="test-file-stub"
          />
        </Link>
      </div>
      <Menu
        className="menu-dark"
        defaultOpenKeys={
          Array [
            "",
          ]
        }
        defaultSelectedKeys={
          Array [
            "",
          ]
        }
        mode="inline"
        selectedKeys={
          Array [
            "",
          ]
        }
        theme="dark"
      >
        <SubMenu
          icon={<ForwardRef(DashboardOutlined) />}
          title="Admin"
        >
          <MenuItem>
            <Link
              className="admin-link"
              to="/admin/teams"
            >
              Teams
            </Link>
          </MenuItem>
          <MenuItem>
            <Link
              className="admin-link"
              to="/product-catalogue/list"
            >
              Product Catalogue
            </Link>
          </MenuItem>
        </SubMenu>
      </Menu>
    </div>,
    null,
  ],
  "className": "ant-layout-sider ant-layout-sider-dark layout-sider",
  "style": Object {
    "flex": "0 0 275px",
    "maxWidth": "275px",
    "minWidth": "275px",
    "width": "275px",
  },
}
`;

exports[`components/ConnectedSidebar renders user managment menu for users with appropriate role 1`] = `
Array [
  undefined,
  <SubMenu
    icon={<ForwardRef(DashboardOutlined) />}
    title="Admin"
  >
    <SubMenu
      title="Users"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users/list"
        >
          User Management
        </Link>
      </MenuItem>
    </SubMenu>
    <MenuItem>
      <Link
        className="admin-link"
        to="/admin/teams"
      >
        Teams
      </Link>
    </MenuItem>
    <MenuItem>
      <Link
        className="admin-link"
        to="/product-catalogue/list"
      >
        Product Catalogue
      </Link>
    </MenuItem>
  </SubMenu>,
]
`;
